--- a/index.html
+++ b/index.html
@@ -136,11 +136,15 @@
 							<div class="time-content">
 								<h4 class="date">dic-2022</h4>
 								<p>
-									Curso de <span class="bold">Programación Web</span> / <span
-										class="bold">Front End Developer</span>, <span class="bold">Gestión de
-										Proyectos</span> e <span class="bold">Inteligencia Emocional</span> del curso
-									"BA Multiplica 2.0" brindado por el Gobierno de la Ciudad y la Universidad
-									Teconológica Nacional (UTN).
+									Curso <span class="bold">BA Multiplica 2.0</span> orientado a <span class="bold">Programación Web</span> / <span class="bold">Front End Developer</span>, <span class="bold">Gestión de Proyectos</span> e <span class="bold">Inteligencia Emocional</span> brindado por el Gobierno de la Ciudad y la Universidad Teconológica Nacional (UTN).
+								</p>
+							</div>
+						</li>
+						<li>
+							<div class="time-content">
+								<h4 class="date">abr-2023</h4>
+								<p>
+									Curso <span class="bold">#SeProgramar</span> del trayecto formativo INTI en el marco de <span class="bold">Argentina Programa 4.0</span> (lenguajes Gobstones, JavaScript y Ruby).
 								</p>
 							</div>
 						</li>
@@ -190,11 +194,15 @@
 							<div>
 								<h4>dic-2022</h4>
 								<p>
-									Curso de <span class="bold">Programación Web</span> / <span
-										class="bold">Front End Developer</span>, <span class="bold">Gestión de
-										Proyectos</span> e <span class="bold">Inteligencia Emocional</span> del curso
-									"BA Multiplica 2.0" brindado por el Gobierno de la Ciudad y la Universidad
-									Teconológica Nacional (UTN).
+									Curso <span class="bold">BA Multiplica 2.0</span> orientado a <span class="bold">Programación Web</span> / <span class="bold">Front End Developer</span>, <span class="bold">Gestión de Proyectos</span> e <span class="bold">Inteligencia Emocional</span> brindado por el Gobierno de la Ciudad y la Universidad Teconológica Nacional (UTN).
+								</p>
+							</div>
+						</li>
+						<li>
+							<div class="time-content">
+								<h4>abr-2023</h4>
+								<p>
+									Curso <span class="bold">#SeProgramar</span> del trayecto formativo INTI en el marco de <span class="bold">Argentina Programa 4.0</span> (lenguajes Gobstones, JavaScript y Ruby).
 								</p>
 							</div>
 						</li>
