--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
 					<a href="#contacto" class="nav-link">contacto</a>
 				</li>
 				<li>
-					<a href="https://drive.google.com/file/d/12oxWA_IviL8OwL-jJnhxWmDzQlkAc0LB/view?usp=share_link"
-						target="_blank">mi cv</a>
+					<a href="https://drive.google.com/file/d/18fjPuJfFqyAj-e5fOo8oVgJsfdDPKOFy/view?usp=sharing"
+						target="_blank">currículum</a>
 				</li>
 			</ul>
 			<div class="hamburger">
@@ -73,7 +73,7 @@
 						class="bold">diseñador
 						gráfico</span>.
 					<br><br>
-					Me encuentro cursando el cuarto año de la licenciatura en <span class="bold">Diseño y Comunicación
+					Me encuentro cursando el quinto año de la licenciatura en <span class="bold">Diseño y Comunicación
 						Visual</span> en la Universidad Nacional de Lanús (UNLa) y a la vez realizo diferentes cursos
 					para continuar aprendiendo y especializándome en diversos rubros como por ejemplo el de programación
 					y el diseño web.
