actualizo info + corrección

--- a/pages/lettering.html
+++ b/pages/lettering.html
@@ -28,7 +28,7 @@
 					<a href="../pages/lettering.html" class="selected">lettering</a>
 				</li>
 				<li>
-					<a href="https://drive.google.com/file/d/12oxWA_IviL8OwL-jJnhxWmDzQlkAc0LB/view?usp=share_link" target="_blank">mi cv</a>
+					<a href="https://drive.google.com/file/d/18fjPuJfFqyAj-e5fOo8oVgJsfdDPKOFy/view?usp=sharing" target="_blank">currículum</a>
 				</li>
 			</ul>
 			<div class="hamburger">
