--- a/pages/editorial.html
+++ b/pages/editorial.html
@@ -28,7 +28,7 @@
 					<a href="../pages/lettering.html">lettering</a>
 				</li>
 				<li>
-					<a href="https://drive.google.com/file/d/12oxWA_IviL8OwL-jJnhxWmDzQlkAc0LB/view?usp=share_link" target="_blank">mi cv</a>
+					<a href="https://drive.google.com/file/d/18fjPuJfFqyAj-e5fOo8oVgJsfdDPKOFy/view?usp=sharing" target="_blank">currículum</a>
 				</li>
 			</ul>
 			<div class="hamburger">
@@ -46,7 +46,7 @@
 			<div class="line"></div>
 			<h1>editorial.</h1>
 			<p>El <span class="bold">diseño editorial</span> es la rama del diseño gráfico que se encarga de la
-				maquetación y composición de todo tipo de publicaciones como libros, revistas, periódicos, etc.
+				maquetación y composición de todo tipo de publicaciones.
 			</p>
 		</section>
 		<!-- GALERÍA -->
