--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 					<a href="#contacto" class="nav-link">contacto</a>
 				</li>
 				<li>
-					<a href="https://drive.google.com/file/d/18fjPuJfFqyAj-e5fOo8oVgJsfdDPKOFy/view?usp=sharing"
+					<a href="https://drive.google.com/file/d/1wT0XG02o5-MuaZnEQfWjqz7xSMaItY-4/view?usp=sharing"
 						target="_blank">currículum</a>
 				</li>
 			</ul>
@@ -148,6 +148,14 @@
 								</p>
 							</div>
 						</li>
+						<li>
+							<div class="time-content">
+								<h4 class="date">ago-2023</h4>
+								<p>
+									Curso <span class="bold">Aspectos básicos del diseño de la experiencia del usuario</span> (parte del programa <span class="bold">Diseño de Experiencia del Usuario</span>) brindado por Google a través de la plataforma Coursera.
+								</p>
+							</div>
+						</li>
 					</ul>
 				</div>
 				<!-- Línea de tiempo para móviles -->
@@ -203,6 +211,14 @@
 								<h4>abr-2023</h4>
 								<p>
 									Curso <span class="bold">#SeProgramar</span> del trayecto formativo INTI en el marco de <span class="bold">Argentina Programa 4.0</span> (lenguajes Gobstones, JavaScript y Ruby).
+								</p>
+							</div>
+						</li>
+						<li>
+							<div class="time-content">
+								<h4 class="date">ago-2023</h4>
+								<p>
+									Curso <span class="bold">Aspectos básicos del diseño de la experiencia del usuario</span> (parte del programa <span class="bold">Diseño de Experiencia del Usuario</span>) brindado por Google a través de la plataforma Coursera.
 								</p>
 							</div>
 						</li>
