--- a/index.html
+++ b/index.html
@@ -156,6 +156,16 @@
 								</p>
 							</div>
 						</li>
+						<li>
+							<div class="time-content">
+								<h4 class="date">sep-2023</h4>
+								<p>
+									Curso de <span class="bold">inglés</span> (nivel 5 CUI-UBA, A2.2 del MCER)
+									brindado por el Programa de Lenguas Extranjeras para becarios Progresar del
+									Ministerio de Educación de la Nación y el Centro Universitario de Idiomas (CUI).
+								</p>
+							</div>
+						</li>
 					</ul>
 				</div>
 				<!-- Línea de tiempo para móviles -->
@@ -219,6 +229,16 @@
 								<h4 class="date">ago-2023</h4>
 								<p>
 									Curso <span class="bold">Aspectos básicos del diseño de la experiencia del usuario</span> (parte del programa <span class="bold">Diseño de Experiencia del Usuario</span>) brindado por Google a través de la plataforma Coursera.
+								</p>
+							</div>
+						</li>
+						<li>
+							<div class="time-content">
+								<h4 class="date">sep-2023</h4>
+								<p>
+									Curso de <span class="bold">inglés</span> (nivel 5 CUI-UBA, A2.2 del MCER)
+									brindado por el Programa de Lenguas Extranjeras para becarios Progresar del
+									Ministerio de Educación de la Nación y el Centro Universitario de Idiomas (CUI).
 								</p>
 							</div>
 						</li>
