--- a/pages/editorial.html
+++ b/pages/editorial.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-	<!-- HEADER -->
+	<!-- Header -->
 	<header>
 		<nav>
 			<ul class="nav-menu">
@@ -39,9 +39,9 @@
 			<a href="../index.html"><img src="../img/home.svg" alt=""></a>
 		</nav>
 	</header>
-	<!-- MAIN -->
+	<!-- Main -->
 	<main>
-		<!-- PRESENTACIÓN -->
+		<!-- Presentación -->
 		<section id="present-design">
 			<div class="line"></div>
 			<h1>editorial.</h1>
@@ -49,7 +49,7 @@
 				maquetación y composición de todo tipo de publicaciones.
 			</p>
 		</section>
-		<!-- GALERÍA -->
+		<!-- Galería -->
 		<section id="gallery">
 			<article class="gallery-section">
 				<h3>maquetación + tapa de libro
@@ -57,97 +57,97 @@
 					<span class="bold">// Hiroshige</span>
 				</h3>
 				<div class="gallery-container">
-					<div class="gallery-item" data-index="1"><img src="../img/galeria/editorial/img-01.jpg" alt="">
+					<div class="gallery-item" data-index="1"><img src="../img/galeria/editorial/img-01.jpg" alt="Tapa" loading="lazy">
 					</div>
-					<div class="gallery-item" data-index="2"><img src="../img/galeria/editorial/img-02.jpg" alt="">
+					<div class="gallery-item" data-index="2"><img src="../img/galeria/editorial/img-02.jpg" alt="Tapa" loading="lazy">
 					</div>
-					<div class="gallery-item" data-index="3"><img src="../img/galeria/editorial/img-03.jpg" alt="">
+					<div class="gallery-item" data-index="3"><img src="../img/galeria/editorial/img-03.jpg" alt="Tapa y contratapa" loading="lazy">
 					</div>
-					<div class="gallery-item" data-index="4"><img src="../img/galeria/editorial/img-04.jpg" alt="">
+					<div class="gallery-item" data-index="4"><img src="../img/galeria/editorial/img-04.jpg" alt="Interior" loading="lazy">
 					</div>
-					<div class="gallery-item" data-index="5"><img src="../img/galeria/editorial/img-05.jpg" alt="">
+					<div class="gallery-item" data-index="5"><img src="../img/galeria/editorial/img-05.jpg" alt="Interior" loading="lazy">
 					</div>
-					<div class="gallery-item" data-index="6"><img src="../img/galeria/editorial/img-06.jpg" alt="">
+					<div class="gallery-item" data-index="6"><img src="../img/galeria/editorial/img-06.jpg" alt="Interior" loading="lazy">
 					</div>
-					<div class="gallery-item" data-index="7"><img src="../img/galeria/editorial/img-07.jpg" alt="">
+					<div class="gallery-item" data-index="7"><img src="../img/galeria/editorial/img-07.jpg" alt="Interior y tapa" loading="lazy">
 					</div>
-					<div class="gallery-item" data-index="8"><img src="../img/galeria/editorial/img-08.jpg" alt="">
+					<div class="gallery-item" data-index="8"><img src="../img/galeria/editorial/img-08.jpg" alt="Interior" loading="lazy">
 					</div>
-					<div class="gallery-item" data-index="9"><img src="../img/galeria/editorial/img-09.jpg" alt="">
+					<div class="gallery-item" data-index="9"><img src="../img/galeria/editorial/img-09.jpg" alt="Interior" loading="lazy">
 					</div>
-					<div class="gallery-item" data-index="10"><img src="../img/galeria/editorial/img-10.jpg" alt="">
+					<div class="gallery-item" data-index="10"><img src="../img/galeria/editorial/img-10.jpg" alt="Interior" loading="lazy">
 					</div>
-					<div class="gallery-item" data-index="11"><img src="../img/galeria/editorial/img-11.jpg" alt="">
+					<div class="gallery-item" data-index="11"><img src="../img/galeria/editorial/img-11.jpg" alt="Interior" loading="lazy">
 					</div>
-					<div class="gallery-item" data-index="12"><img src="../img/galeria/editorial/img-12.jpg" alt="">
+					<div class="gallery-item" data-index="12"><img src="../img/galeria/editorial/img-12.jpg" alt="Interior" loading="lazy">
 					</div>
-					<div class="gallery-item" data-index="13"><img src="../img/galeria/editorial/img-13.jpg" alt="">
+					<div class="gallery-item" data-index="13"><img src="../img/galeria/editorial/img-13.jpg" alt="Interior" loading="lazy">
 					</div>
-					<div class="gallery-item" data-index="14"><img src="../img/galeria/editorial/img-14.jpg" alt="">
+					<div class="gallery-item" data-index="14"><img src="../img/galeria/editorial/img-14.jpg" alt="Interior" loading="lazy">
 					</div>
-					<div class="gallery-item" data-index="15"><img src="../img/galeria/editorial/img-15.jpg" alt="">
+					<div class="gallery-item" data-index="15"><img src="../img/galeria/editorial/img-15.jpg" alt="Interior" loading="lazy">
 					</div>
 				</div>
 			</article>
 			<!-- DIVISIÓN -->
 			<div class="line"></div>
-			<!-- GALERÍA -->
+			<!-- Galería -->
 			<article class="gallery-section">
 				<h3>folleto + packaging
 					<br><br>
 					<span class="bold">// Huerta urbana</span>
 				</h3>
 				<div class="gallery-container">
-					<div class="gallery-item" data-index="16"><img src="../img/galeria/editorial/img-16.jpg" alt="">
+					<div class="gallery-item" data-index="16"><img src="../img/galeria/editorial/img-16.jpg" alt="Folleto exterior" loading="lazy">
 					</div>
-					<div class="gallery-item" data-index="17"><img src="../img/galeria/editorial/img-17.jpg" alt="">
+					<div class="gallery-item" data-index="17"><img src="../img/galeria/editorial/img-17.jpg" alt="Folleto interior" loading="lazy">
 					</div>
-					<div class="gallery-item" data-index="18"><img src="../img/galeria/editorial/img-18.jpg" alt="">
+					<div class="gallery-item" data-index="18"><img src="../img/galeria/editorial/img-18.jpg" alt="Packaging semillas" loading="lazy">
 					</div>
 				</div>
 			</article>
 			<!-- DIVISIÓN -->
 			<div class="line"></div>
-			<!-- GALERÍA -->
+			<!-- Galería -->
 			<article class="gallery-section">
 				<h3>maquetación + tapa de libro
 					<br><br>
 					<span class="bold">// Un mundo feliz, de Aldous Huxley</span>
 				</h3>
 				<div class="gallery-container">
-					<div class="gallery-item" data-index="19"><img src="../img/galeria/editorial/img-19.jpg" alt="">
+					<div class="gallery-item" data-index="19"><img src="../img/galeria/editorial/img-19.jpg" alt="Tapa y contratapa" loading="lazy">
 					</div>
-					<div class="gallery-item" data-index="20"><img src="../img/galeria/editorial/img-20.jpg" alt="">
+					<div class="gallery-item" data-index="20"><img src="../img/galeria/editorial/img-20.jpg" alt="Tapa" loading="lazy">
 					</div>
-					<div class="gallery-item" data-index="21"><img src="../img/galeria/editorial/img-21.jpg" alt="">
+					<div class="gallery-item" data-index="21"><img src="../img/galeria/editorial/img-21.jpg" alt="Tapa" loading="lazy">
 					</div>
-					<div class="gallery-item" data-index="22"><img src="../img/galeria/editorial/img-22.jpg" alt="">
+					<div class="gallery-item" data-index="22"><img src="../img/galeria/editorial/img-22.jpg" alt="Interior" loading="lazy">
 					</div>
-					<div class="gallery-item" data-index="23"><img src="../img/galeria/editorial/img-23.jpg" alt="">
+					<div class="gallery-item" data-index="23"><img src="../img/galeria/editorial/img-23.jpg" alt="Interior" loading="lazy">
 					</div>
-					<div class="gallery-item" data-index="24"><img src="../img/galeria/editorial/img-24.jpg" alt="">
+					<div class="gallery-item" data-index="24"><img src="../img/galeria/editorial/img-24.jpg" alt="Interior" loading="lazy">
 					</div>
-					<div class="gallery-item" data-index="25"><img src="../img/galeria/editorial/img-25.jpg" alt="">
+					<div class="gallery-item" data-index="25"><img src="../img/galeria/editorial/img-25.jpg" alt="Interior" loading="lazy">
 					</div>
-					<div class="gallery-item" data-index="26"><img src="../img/galeria/editorial/img-26.jpg" alt="">
+					<div class="gallery-item" data-index="26"><img src="../img/galeria/editorial/img-26.jpg" alt="Interior" loading="lazy">
 					</div>
-					<div class="gallery-item" data-index="27"><img src="../img/galeria/editorial/img-27.jpg" alt="">
+					<div class="gallery-item" data-index="27"><img src="../img/galeria/editorial/img-27.jpg" alt="Interior" loading="lazy">
 					</div>
-					<div class="gallery-item" data-index="28"><img src="../img/galeria/editorial/img-28.jpg" alt="">
+					<div class="gallery-item" data-index="28"><img src="../img/galeria/editorial/img-28.jpg" alt="Interior" loading="lazy">
 					</div>
-					<div class="gallery-item" data-index="29"><img src="../img/galeria/editorial/img-29.jpg" alt="">
+					<div class="gallery-item" data-index="29"><img src="../img/galeria/editorial/img-29.jpg" alt="Interior" loading="lazy">
 					</div>
-					<div class="gallery-item" data-index="30"><img src="../img/galeria/editorial/img-30.jpg" alt="">
+					<div class="gallery-item" data-index="30"><img src="../img/galeria/editorial/img-30.jpg" alt="Interior" loading="lazy">
 					</div>
 				</div>
 			</article>
 		</section>
-		<!-- DIVISIÓN -->
+		<!-- División -->
 		<div class="line-container">
 			<div class="line"></div>
 		</div>
 	</main>
-	<!-- FOOTER -->
+	<!-- Footer -->
 	<footer>
 		<ul class="footer-data">
 			<li class="footer-title">
@@ -156,7 +156,7 @@
 			<li>diseñador gráfico</li>
 			<li>maquetador web</li>
 		</ul>
-		<!-- REDES SOCIALES -->
+		<!-- Redes sociales -->
 		<ul class="footer-redes">
 			<li><a href="https://www.behance.net/facundovacotti" target="_blank" class="fa-brands fa-behance"></a></li>
 			<li><a href="https://facebook.com/fvacotti" target="_blank" class="fa-brands fa-facebook"></a></li>
@@ -165,12 +165,12 @@
 			<li><a href="https://www.youtube.com/@fvacotti" target="_blank" class="fa-brands fa-youtube"></a></li>
 		</ul>
 	</footer>
-	<!-- BOTÓN SUBIR -->
+	<!-- Botón subir -->
 	<a href="#" class="btn-up" id="btn-up">
 		<i class="fa-solid fa-chevron-up"></i>
 	</a>
 
-	<!-- SCRIPT -->
+	<!-- Script -->
 	<script src="../js/main.js"></script>
 	<script src="../js/galeria.js"></script>
 	<script src="https://kit.fontawesome.com/5727d2ffb3.js" crossorigin="anonymous"></script>
