--- a/pages/lettering.html
+++ b/pages/lettering.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-	<!-- HEADER -->
+	<!-- Header -->
 	<header>
 		<nav>
 			<ul class="nav-menu">
@@ -39,9 +39,9 @@
 			<a href="../index.html"><img src="../img/home.svg" alt=""></a>
 		</nav>
 	</header>
-	<!-- MAIN -->
+	<!-- Main -->
 	<main>
-		<!-- PRESENTACIÓN -->
+		<!-- Presentación -->
 		<section id="present-design">
 			<div class="line"></div>
 			<h1>lettering.</h1>
@@ -49,7 +49,7 @@
 				lugar de simplemente escribirlas.
 			</p>
 		</section>
-		<!-- GALERÍA -->
+		<!-- Galería -->
 		<section id="gallery">
 			<article class="gallery-section">
 				<h3>lettering + editorial + intervención.
@@ -57,39 +57,39 @@
 					<span class="bold">// Real</span>
 				</h3>
 				<div class="gallery-container">
-					<div class="gallery-item" data-index="1"><img src="../img/galeria/lettering/img-01.jpg" alt="">
+					<div class="gallery-item" data-index="1"><img src="../img/galeria/lettering/img-01.jpg" alt="Poster/afiche" loading="lazy">
 					</div>
-					<div class="gallery-item" data-index="2"><img src="../img/galeria/lettering/img-02.jpg" alt="">
+					<div class="gallery-item" data-index="2"><img src="../img/galeria/lettering/img-02.jpg" alt="Estampilla" loading="lazy">
 					</div>
-					<div class="gallery-item" data-index="3"><img src="../img/galeria/lettering/img-03.jpg" alt="">
+					<div class="gallery-item" data-index="3"><img src="../img/galeria/lettering/img-03.jpg" alt="Tapa de libro" loading="lazy">
 					</div>
-					<div class="gallery-item" data-index="4"><img src="../img/galeria/lettering/img-04.jpg" alt="">
+					<div class="gallery-item" data-index="4"><img src="../img/galeria/lettering/img-04.jpg" alt="Interior de libro" loading="lazy">
 					</div>
-					<div class="gallery-item" data-index="5"><img src="../img/galeria/lettering/img-05.jpg" alt="">
+					<div class="gallery-item" data-index="5"><img src="../img/galeria/lettering/img-05.jpg" alt="Interior de libro" loading="lazy">
 					</div>
-					<div class="gallery-item" data-index="6"><img src="../img/galeria/lettering/img-06.jpg" alt="">
+					<div class="gallery-item" data-index="6"><img src="../img/galeria/lettering/img-06.jpg" alt="Interior de libro" loading="lazy">
 					</div>
-					<div class="gallery-item" data-index="7"><img src="../img/galeria/lettering/img-07.jpg" alt="">
+					<div class="gallery-item" data-index="7"><img src="../img/galeria/lettering/img-07.jpg" alt="Interior de libro" loading="lazy">
 					</div>
-					<div class="gallery-item" data-index="8"><img src="../img/galeria/lettering/img-08.jpg" alt="">
+					<div class="gallery-item" data-index="8"><img src="../img/galeria/lettering/img-08.jpg" alt="Interior de libro" loading="lazy">
 					</div>
-					<div class="gallery-item" data-index="9"><img src="../img/galeria/lettering/img-09.jpg" alt="">
+					<div class="gallery-item" data-index="9"><img src="../img/galeria/lettering/img-09.jpg" alt="Interior de libro" loading="lazy">
 					</div>
-					<div class="gallery-item" data-index="10"><img src="../img/galeria/lettering/img-10.jpg" alt="">
+					<div class="gallery-item" data-index="10"><img src="../img/galeria/lettering/img-10.jpg" alt="Tapa y contratapa de libro" loading="lazy">
 					</div>
-					<div class="gallery-item" data-index="11"><img src="../img/galeria/lettering/img-11.jpg" alt="">
+					<div class="gallery-item" data-index="11"><img src="../img/galeria/lettering/img-11.jpg" alt="Poster/afiche" loading="lazy">
 					</div>
-					<div class="gallery-item" data-index="12"><img src="../img/galeria/lettering/img-12.jpg" alt="">
+					<div class="gallery-item" data-index="12"><img src="../img/galeria/lettering/img-12.jpg" alt="Interveción urbana" loading="lazy">
 					</div>
 				</div>
 			</article>
 		</section>
-		<!-- DIVISIÓN -->
+		<!-- División -->
 		<div class="line-container">
 			<div class="line"></div>
 		</div>
 	</main>
-	<!-- FOOTER -->
+	<!-- Footer -->
 	<footer>
 		<ul class="footer-data">
 			<li class="footer-title">
@@ -98,7 +98,7 @@
 			<li>diseñador gráfico</li>
 			<li>maquetador web</li>
 		</ul>
-		<!-- REDES SOCIALES -->
+		<!-- Redes sociales -->
 		<ul class="footer-redes">
 			<li><a href="https://www.behance.net/facundovacotti" target="_blank" class="fa-brands fa-behance"></a></li>
 			<li><a href="https://facebook.com/fvacotti" target="_blank" class="fa-brands fa-facebook"></a></li>
@@ -107,12 +107,12 @@
 			<li><a href="https://www.youtube.com/@fvacotti" target="_blank" class="fa-brands fa-youtube"></a></li>
 		</ul>
 	</footer>
-	<!-- BOTÓN SUBIR -->
+	<!-- Botón subir -->
 	<a href="#" class="btn-up" id="btn-up">
 		<i class="fa-solid fa-chevron-up"></i>
 	</a>
 
-	<!-- SCRIPT -->
+	<!-- Script -->
 	<script src="../js/main.js"></script>
 	<script src="../js/galeria.js"></script>
 	<script src="https://kit.fontawesome.com/5727d2ffb3.js" crossorigin="anonymous"></script>
