--- a/pages/branding.html
+++ b/pages/branding.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-	<!-- HEADER -->
+	<!-- Header -->
 	<header>
 		<nav>
 			<ul class="nav-menu">
@@ -39,9 +39,9 @@
 			<a href="../index.html"><img src="../img/home.svg" alt=""></a>
 		</nav>
 	</header>
-	<!-- MAIN -->
+	<!-- Main -->
 	<main>
-		<!-- PRESENTACIÓN -->
+		<!-- Presentación -->
 		<section id="present-design">
 			<div class="line"></div>
 			<h1>branding.</h1>
@@ -49,7 +49,7 @@
 				posicionamiento, el propósito y los valores de una marca.
 			</p>
 		</section>
-		<!-- GALERÍA -->
+		<!-- Galería -->
 		<section id="gallery">
 			<article class="gallery-section">
 				<h3>rediseño de escudo + equipación
@@ -57,70 +57,70 @@
 					<span class="bold">// Club Atlético Banfield</span>
 				</h3>
 				<div class="gallery-container">
-					<div class="gallery-item" data-index="1"><img src="../img/galeria/branding/img-01.png" alt=""></div>
-					<div class="gallery-item" data-index="2"><img src="../img/galeria/branding/img-02.png" alt=""></div>
-					<div class="gallery-item" data-index="3"><img src="../img/galeria/branding/img-03.png" alt=""></div>
-					<div class="gallery-item" data-index="4"><img src="../img/galeria/branding/img-04.png" alt=""></div>
-					<div class="gallery-item" data-index="5"><img src="../img/galeria/branding/img-05.png" alt=""></div>
-					<div class="gallery-item" data-index="6"><img src="../img/galeria/branding/img-06.png" alt=""></div>
+					<div class="gallery-item" data-index="1"><img src="../img/galeria/branding/img-01.png" alt="Escudo" loading="lazy"></div>
+					<div class="gallery-item" data-index="2"><img src="../img/galeria/branding/img-02.png" alt="Escudo positivo" loading="lazy"></div>
+					<div class="gallery-item" data-index="3"><img src="../img/galeria/branding/img-03.png" alt="Escudo negativo" loading="lazy"></div>
+					<div class="gallery-item" data-index="4"><img src="../img/galeria/branding/img-04.png" alt="Camiseta titular" loading="lazy"></div>
+					<div class="gallery-item" data-index="5"><img src="../img/galeria/branding/img-05.png" alt="Camiseta suplente" loading="lazy"></div>
+					<div class="gallery-item" data-index="6"><img src="../img/galeria/branding/img-06.png" alt="Camiseta alternativa" loading="lazy"></div>
 				</div>
 			</article>
-			<!-- DIVISIÓN -->
+			<!-- División -->
 			<div class="line"></div>
-			<!-- GALERÍA -->
+			<!-- Galería -->
 			<article class="gallery-section">
 				<h3>rediseño de escudo + equipación
 					<br><br>
 					<span class="bold">// RC Deportivo de La Coruña</span>
 				</h3>
 				<div class="gallery-container">
-					<div class="gallery-item" data-index="7"><img src="../img/galeria/branding/img-07.png" alt=""></div>
-					<div class="gallery-item" data-index="8"><img src="../img/galeria/branding/img-08.png" alt=""></div>
-					<div class="gallery-item" data-index="9"><img src="../img/galeria/branding/img-09.png" alt=""></div>
-					<div class="gallery-item" data-index="10"><img src="../img/galeria/branding/img-10.png" alt="">
+					<div class="gallery-item" data-index="7"><img src="../img/galeria/branding/img-07.png" alt="Escudo" loading="lazy"></div>
+					<div class="gallery-item" data-index="8"><img src="../img/galeria/branding/img-08.png" alt="Escudo positivo" loading="lazy"></div>
+					<div class="gallery-item" data-index="9"><img src="../img/galeria/branding/img-09.png" alt="Escudo negativo" loading="lazy"></div>
+					<div class="gallery-item" data-index="10"><img src="../img/galeria/branding/img-10.png" alt="Camiseta titular" loading="lazy">
 					</div>
-					<div class="gallery-item" data-index="11"><img src="../img/galeria/branding/img-11.png" alt="">
+					<div class="gallery-item" data-index="11"><img src="../img/galeria/branding/img-11.png" alt="Camiseta suplente" loading="lazy">
 					</div>
-					<div class="gallery-item" data-index="12"><img src="../img/galeria/branding/img-12.png" alt="">
+					<div class="gallery-item" data-index="12"><img src="../img/galeria/branding/img-12.png" alt="Camiseta alternativa" loading="lazy">
 					</div>
 				</div>
 			</article>
-			<!-- DIVISIÓN -->
+			<!-- División -->
 			<div class="line"></div>
-			<!-- GALERÍA -->
+			<!-- Galería -->
 			<article class="gallery-section">
 				<h3>desarrollo de identidad visual
 					<br><br>
 					<span class="bold">// JJ.OO. Roma 2032</span>
 				</h3>
 				<div class="gallery-container">
-					<div class="gallery-item" data-index="13"><img src="../img/galeria/branding/img-13.png" alt="">
+					<div class="gallery-item" data-index="13"><img src="../img/galeria/branding/img-13.png" alt="Logo" loading="lazy">
 					</div>
-					<div class="gallery-item" data-index="14"><img src="../img/galeria/branding/img-14.png" alt="">
+					<div class="gallery-item" data-index="14"><img src="../img/galeria/branding/img-14.png" alt="Logo positivo" loading="lazy">
 					</div>
-					<div class="gallery-item" data-index="15"><img src="../img/galeria/branding/img-15.png" alt="">
+					<div class="gallery-item" data-index="15"><img src="../img/galeria/branding/img-15.png" alt="Logo negativo" loading="lazy">
 					</div>
-					<div class="gallery-item" data-index="16"><img src="../img/galeria/branding/img-16.png" alt="">
+					<div class="gallery-item" data-index="16"><img src="../img/galeria/branding/img-16.png" alt="Chaqueta staff" loading="lazy">
 					</div>
-					<div class="gallery-item" data-index="17"><img src="../img/galeria/branding/img-17.png" alt="">
+					<div class="gallery-item" data-index="17"><img src="../img/galeria/branding/img-17.png" alt="Camiseta staff" loading="lazy">
 					</div>
-					<div class="gallery-item" data-index="18"><img src="../img/galeria/branding/img-18.png" alt="">
+					<div class="gallery-item" data-index="18"><img src="../img/galeria/branding/img-18.png" alt="Joggins staff" loading="lazy">
 					</div>
-					<div class="gallery-item" data-index="19"><img src="../img/galeria/branding/img-19.jpg" alt="">
+					<div class="gallery-item" data-index="19"><img src="../img/galeria/branding/img-19.jpg" alt="Poster/afiche oficial" loading="lazy">
 					</div>
-					<div class="gallery-item" data-index="20"><img src="../img/galeria/branding/img-20.jpg" alt="">
+					<div class="gallery-item" data-index="20"><img src="../img/galeria/branding/img-20.jpg" alt="Poster/afiche Fútbol" loading="lazy">
 					</div>
-					<div class="gallery-item" data-index="21"><img src="../img/galeria/branding/img-21.jpg" alt="">
+					<div class="gallery-item" data-index="21"><img src="../img/galeria/branding/img-21.jpg" alt="Estampilla" loading="lazy">
 					</div>
 				</div>
 			</article>
 		</section>
-		<!-- DIVISIÓN -->
+		<!-- División -->
 		<div class="line-container">
 			<div class="line"></div>
 		</div>
 	</main>
-	<!-- FOOTER -->
+	<!-- Footer -->
 	<footer>
 		<ul class="footer-data">
 			<li class="footer-title">
@@ -129,7 +129,7 @@
 			<li>diseñador gráfico</li>
 			<li>maquetador web</li>
 		</ul>
-		<!-- REDES SOCIALES -->
+		<!-- Redes sociales -->
 		<ul class="footer-redes">
 			<li><a href="https://www.behance.net/facundovacotti" target="_blank" class="fa-brands fa-behance"></a></li>
 			<li><a href="https://facebook.com/fvacotti" target="_blank" class="fa-brands fa-facebook"></a></li>
@@ -138,12 +138,12 @@
 			<li><a href="https://www.youtube.com/@fvacotti" target="_blank" class="fa-brands fa-youtube"></a></li>
 		</ul>
 	</footer>
-	<!-- BOTÓN SUBIR -->
+	<!-- Botón subir -->
 	<a href="#" class="btn-up" id="btn-up">
 		<i class="fa-solid fa-chevron-up"></i>
 	</a>
 
-	<!-- SCRIPT -->
+	<!-- Script -->
 	<script src="../js/main.js"></script>
 	<script src="../js/galeria.js"></script>
 	<script src="https://kit.fontawesome.com/5727d2ffb3.js" crossorigin="anonymous"></script>
