--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 					<a href="#contacto" class="nav-link">contacto</a>
 				</li>
 				<li>
-					<a href="https://drive.google.com/file/d/1wT0XG02o5-MuaZnEQfWjqz7xSMaItY-4/view?usp=sharing"
+					<a href="https://drive.google.com/file/d/1gk36GeN4gryWcDzQ4F5wW2jaOAo8kMTP"
 						target="_blank">currículum</a>
 				</li>
 			</ul>
