--- a/pages/editorial.html
+++ b/pages/editorial.html
@@ -28,7 +28,7 @@
 					<a href="../pages/lettering.html">lettering</a>
 				</li>
 				<li>
-					<a href="https://drive.google.com/file/d/18fjPuJfFqyAj-e5fOo8oVgJsfdDPKOFy/view?usp=sharing" target="_blank">currículum</a>
+					<a href="https://drive.google.com/file/d/1gk36GeN4gryWcDzQ4F5wW2jaOAo8kMTP" target="_blank">currículum</a>
 				</li>
 			</ul>
 			<div class="hamburger">
