--- a/pages/branding.html
+++ b/pages/branding.html
@@ -28,7 +28,8 @@
 					<a href="../pages/lettering.html">lettering</a>
 				</li>
 				<li>
-					<a href="https://drive.google.com/file/d/1gk36GeN4gryWcDzQ4F5wW2jaOAo8kMTP" target="_blank">currículum</a>
+					<a href="https://drive.google.com/file/d/1gk36GeN4gryWcDzQ4F5wW2jaOAo8kMTP"
+						target="_blank">currículum</a>
 				</li>
 			</ul>
 			<div class="hamburger">
@@ -57,12 +58,26 @@
 					<span class="bold">// Club Atlético Banfield</span>
 				</h3>
 				<div class="gallery-container">
-					<div class="gallery-item" data-index="1"><img src="../img/galeria/branding/img-01.png" alt="Escudo" loading="lazy"></div>
-					<div class="gallery-item" data-index="2"><img src="../img/galeria/branding/img-02.png" alt="Escudo positivo" loading="lazy"></div>
-					<div class="gallery-item" data-index="3"><img src="../img/galeria/branding/img-03.png" alt="Escudo negativo" loading="lazy"></div>
-					<div class="gallery-item" data-index="4"><img src="../img/galeria/branding/img-04.png" alt="Camiseta titular" loading="lazy"></div>
-					<div class="gallery-item" data-index="5"><img src="../img/galeria/branding/img-05.png" alt="Camiseta suplente" loading="lazy"></div>
-					<div class="gallery-item" data-index="6"><img src="../img/galeria/branding/img-06.png" alt="Camiseta alternativa" loading="lazy"></div>
+					<div class="gallery-item" data-index="1"><img src="../img/galeria/branding/img-01.png" alt="Escudo"
+							loading="lazy"></div>
+					<div class="gallery-item" data-index="2"><img src="../img/galeria/branding/img-02.png"
+							alt="Escudo positivo" loading="lazy"></div>
+					<div class="gallery-item" data-index="3"><img src="../img/galeria/branding/img-03.png"
+							alt="Escudo negativo" loading="lazy"></div>
+					<div class="gallery-item" data-index="4"><img src="../img/galeria/branding/img-04.png"
+							alt="Camiseta titular" loading="lazy"></div>
+					<div class="gallery-item" data-index="5"><img src="../img/galeria/branding/img-05.png"
+							alt="Camiseta suplente" loading="lazy"></div>
+					<div class="gallery-item" data-index="6"><img src="../img/galeria/branding/img-06.png"
+							alt="Camiseta alternativa" loading="lazy"></div>
+				</div>
+				<div class="ficha">
+					<p><span class="bold">título</span> <br> Banfield</p>
+					<p><span class="bold">carácter</span> <br> Personal</p>
+					<p><span class="bold">autoría</span> <br> Facundo Vacotti</p>
+					<p><span class="bold">año de realización</span> <br> 2022</p>
+					<p><span class="bold">duración aproximada</span> <br> 3 meses</p>
+					<p><span class="bold">piezas realizadas</span> <br> Logo <br> Indumentaria</p>
 				</div>
 			</article>
 			<!-- División -->
@@ -74,15 +89,29 @@
 					<span class="bold">// RC Deportivo de La Coruña</span>
 				</h3>
 				<div class="gallery-container">
-					<div class="gallery-item" data-index="7"><img src="../img/galeria/branding/img-07.png" alt="Escudo" loading="lazy"></div>
-					<div class="gallery-item" data-index="8"><img src="../img/galeria/branding/img-08.png" alt="Escudo positivo" loading="lazy"></div>
-					<div class="gallery-item" data-index="9"><img src="../img/galeria/branding/img-09.png" alt="Escudo negativo" loading="lazy"></div>
-					<div class="gallery-item" data-index="10"><img src="../img/galeria/branding/img-10.png" alt="Camiseta titular" loading="lazy">
+					<div class="gallery-item" data-index="7"><img src="../img/galeria/branding/img-07.png" alt="Escudo"
+							loading="lazy"></div>
+					<div class="gallery-item" data-index="8"><img src="../img/galeria/branding/img-08.png"
+							alt="Escudo positivo" loading="lazy"></div>
+					<div class="gallery-item" data-index="9"><img src="../img/galeria/branding/img-09.png"
+							alt="Escudo negativo" loading="lazy"></div>
+					<div class="gallery-item" data-index="10"><img src="../img/galeria/branding/img-10.png"
+							alt="Camiseta titular" loading="lazy">
 					</div>
-					<div class="gallery-item" data-index="11"><img src="../img/galeria/branding/img-11.png" alt="Camiseta suplente" loading="lazy">
+					<div class="gallery-item" data-index="11"><img src="../img/galeria/branding/img-11.png"
+							alt="Camiseta suplente" loading="lazy">
 					</div>
-					<div class="gallery-item" data-index="12"><img src="../img/galeria/branding/img-12.png" alt="Camiseta alternativa" loading="lazy">
+					<div class="gallery-item" data-index="12"><img src="../img/galeria/branding/img-12.png"
+							alt="Camiseta alternativa" loading="lazy">
 					</div>
+				</div>
+				<div class="ficha">
+					<p><span class="bold">título</span> <br> RC Deportivo <br> de La Coruña</p>
+					<p><span class="bold">carácter</span> <br> Personal</p>
+					<p><span class="bold">autoría</span> <br> Facundo Vacotti</p>
+					<p><span class="bold">año de realización</span> <br> 2022</p>
+					<p><span class="bold">duración aproximada</span> <br> 2 meses</p>
+					<p><span class="bold">piezas realizadas</span> <br> Logo <br> Indumentaria</p>
 				</div>
 			</article>
 			<!-- División -->
@@ -94,24 +123,41 @@
 					<span class="bold">// JJ.OO. Roma 2032</span>
 				</h3>
 				<div class="gallery-container">
-					<div class="gallery-item" data-index="13"><img src="../img/galeria/branding/img-13.png" alt="Logo" loading="lazy">
+					<div class="gallery-item" data-index="13"><img src="../img/galeria/branding/img-13.png" alt="Logo"
+							loading="lazy">
 					</div>
-					<div class="gallery-item" data-index="14"><img src="../img/galeria/branding/img-14.png" alt="Logo positivo" loading="lazy">
+					<div class="gallery-item" data-index="14"><img src="../img/galeria/branding/img-14.png"
+							alt="Logo positivo" loading="lazy">
 					</div>
-					<div class="gallery-item" data-index="15"><img src="../img/galeria/branding/img-15.png" alt="Logo negativo" loading="lazy">
+					<div class="gallery-item" data-index="15"><img src="../img/galeria/branding/img-15.png"
+							alt="Logo negativo" loading="lazy">
 					</div>
-					<div class="gallery-item" data-index="16"><img src="../img/galeria/branding/img-16.png" alt="Chaqueta staff" loading="lazy">
+					<div class="gallery-item" data-index="16"><img src="../img/galeria/branding/img-16.png"
+							alt="Chaqueta staff" loading="lazy">
 					</div>
-					<div class="gallery-item" data-index="17"><img src="../img/galeria/branding/img-17.png" alt="Camiseta staff" loading="lazy">
+					<div class="gallery-item" data-index="17"><img src="../img/galeria/branding/img-17.png"
+							alt="Camiseta staff" loading="lazy">
 					</div>
-					<div class="gallery-item" data-index="18"><img src="../img/galeria/branding/img-18.png" alt="Joggins staff" loading="lazy">
+					<div class="gallery-item" data-index="18"><img src="../img/galeria/branding/img-18.png"
+							alt="Joggins staff" loading="lazy">
 					</div>
-					<div class="gallery-item" data-index="19"><img src="../img/galeria/branding/img-19.jpg" alt="Poster/afiche oficial" loading="lazy">
+					<div class="gallery-item" data-index="19"><img src="../img/galeria/branding/img-19.jpg"
+							alt="Poster/afiche oficial" loading="lazy">
 					</div>
-					<div class="gallery-item" data-index="20"><img src="../img/galeria/branding/img-20.jpg" alt="Poster/afiche Fútbol" loading="lazy">
+					<div class="gallery-item" data-index="20"><img src="../img/galeria/branding/img-20.jpg"
+							alt="Poster/afiche Fútbol" loading="lazy">
 					</div>
-					<div class="gallery-item" data-index="21"><img src="../img/galeria/branding/img-21.jpg" alt="Estampilla" loading="lazy">
+					<div class="gallery-item" data-index="21"><img src="../img/galeria/branding/img-21.jpg"
+							alt="Estampilla" loading="lazy">
 					</div>
+				</div>
+				<div class="ficha">
+					<p><span class="bold">título</span> <br> Juegos Olímpicos <br> Roma 2032</p>
+					<p><span class="bold">carácter</span> <br> Académico</p>
+					<p><span class="bold">autoría</span> <br> Facundo Vacotti <br> Juliana Vidal</p>
+					<p><span class="bold">año de realización</span> <br> 2021</p>
+					<p><span class="bold">duración aproximada</span> <br> 3 meses</p>
+					<p><span class="bold">piezas realizadas</span> <br> Logo <br> Indumentaria <br> Afiches <br> Estampilla</p>
 				</div>
 			</article>
 		</section>
