--- a/pages/editorial.html
+++ b/pages/editorial.html
@@ -88,6 +88,14 @@
 					<div class="gallery-item" data-index="15"><img src="../img/galeria/editorial/img-15.jpg" alt="Interior" loading="lazy">
 					</div>
 				</div>
+				<div class="ficha">
+					<p><span class="bold">título</span> <br> Hiroshige</p>
+					<p><span class="bold">carácter</span> <br> Académico</p>
+					<p><span class="bold">autoría</span> <br> Facundo Vacotti <br> Juliana Vidal</p>
+					<p><span class="bold">año de realización</span> <br> 2022</p>
+					<p><span class="bold">duración aproximada</span> <br> 2 meses</p>
+					<p><span class="bold">piezas realizadas</span> <br> Maquetación de libro <br> Diseño de tapa <br> (220x280 mm.)</p>
+				</div>
 			</article>
 			<!-- DIVISIÓN -->
 			<div class="line"></div>
@@ -104,6 +112,14 @@
 					</div>
 					<div class="gallery-item" data-index="18"><img src="../img/galeria/editorial/img-18.jpg" alt="Packaging semillas" loading="lazy">
 					</div>
+				</div>
+				<div class="ficha">
+					<p><span class="bold">título</span> <br> Huerta urbana</p>
+					<p><span class="bold">carácter</span> <br> Académico</p>
+					<p><span class="bold">autoría</span> <br> Facundo Vacotti <br> Juliana Vidal</p>
+					<p><span class="bold">año de realización</span> <br> 2022</p>
+					<p><span class="bold">duración aproximada</span> <br> 1 mes</p>
+					<p><span class="bold">piezas realizadas</span> <br> Folleto <br> (600x210 mm.)<br> Packaging <br> de semillas <br> (200x150 mm.)</p>
 				</div>
 			</article>
 			<!-- DIVISIÓN -->
@@ -139,6 +155,14 @@
 					</div>
 					<div class="gallery-item" data-index="30"><img src="../img/galeria/editorial/img-30.jpg" alt="Interior" loading="lazy">
 					</div>
+				</div>
+				<div class="ficha">
+					<p><span class="bold">título</span> <br> Un mundo feliz <br> Huxley</p>
+					<p><span class="bold">carácter</span> <br> Académico</p>
+					<p><span class="bold">autoría</span> <br> Facundo Vacotti</p>
+					<p><span class="bold">año de realización</span> <br> 2022</p>
+					<p><span class="bold">duración aproximada</span> <br> 1 mes</p>
+					<p><span class="bold">piezas realizadas</span> <br> Maquetación de libro <br> Diseño de tapa <br> (A5)</p>
 				</div>
 			</article>
 		</section>
