--- a/pages/lettering.html
+++ b/pages/lettering.html
@@ -83,6 +83,14 @@
 					</div>
 				</div>
 			</article>
+			<div class="ficha">
+				<p><span class="bold">título</span> <br> Real</p>
+				<p><span class="bold">carácter</span> <br> Académico</p>
+				<p><span class="bold">autoría</span> <br> Facundo Vacotti</p>
+				<p><span class="bold">año de realización</span> <br> 2022</p>
+				<p><span class="bold">duración aproximada</span> <br> 2 meses</p>
+				<p><span class="bold">piezas realizadas</span> <br> Afiche (A3) <br> Postales <br> (180x130 mm) <br> Maquetación de libro <br> (A5) <br> intervención urbana</p>
+			</div>
 		</section>
 		<!-- División -->
 		<div class="line-container">
