--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@
 				</div>
 				<!-- Vías alternativas -->
 				<div class="contacto-other">
-					<h3>vías alternativas.</h3>
+					<h3>vías alternativas de contacto.</h3>
 					<ul>
 						<li>
 							<a href="tel:5411441000093" target="_blank" class="fa-brands fa-whatsapp"></a>
@@ -343,7 +343,7 @@
 				<a href="https://www.instagram.com/fvacotti" target="_blank" class="fa-brands fa-instagram"></a>
 			</li>
 			<li>
-				<a href="https://twitter.com/fvacotti" target="_blank" class="fa-brands fa-twitter"></a>
+				<a href="https://twitter.com/fvacotti" target="_blank" class="fa-brands fa-x-twitter"></a>
 			</li>
 			<li>
 				<a href="https://www.youtube.com/@fvacotti" target="_blank" class="fa-brands fa-youtube"></a>
