--- a/pages/branding.html
+++ b/pages/branding.html
@@ -72,7 +72,7 @@
 							alt="Camiseta alternativa" loading="lazy"></div>
 				</div>
 				<div class="ficha">
-					<p><span class="bold">título</span> <br> Banfield</p>
+					<p><span class="bold">proyecto</span> <br> Banfield</p>
 					<p><span class="bold">carácter</span> <br> Personal</p>
 					<p><span class="bold">autoría</span> <br> Facundo Vacotti</p>
 					<p><span class="bold">año de realización</span> <br> 2022</p>
@@ -106,7 +106,7 @@
 					</div>
 				</div>
 				<div class="ficha">
-					<p><span class="bold">título</span> <br> RC Deportivo <br> de La Coruña</p>
+					<p><span class="bold">proyecto</span> <br> RC Deportivo <br> de La Coruña</p>
 					<p><span class="bold">carácter</span> <br> Personal</p>
 					<p><span class="bold">autoría</span> <br> Facundo Vacotti</p>
 					<p><span class="bold">año de realización</span> <br> 2022</p>
@@ -152,7 +152,7 @@
 					</div>
 				</div>
 				<div class="ficha">
-					<p><span class="bold">título</span> <br> Juegos Olímpicos <br> Roma 2032</p>
+					<p><span class="bold">proyecto</span> <br> Juegos Olímpicos <br> Roma 2032</p>
 					<p><span class="bold">carácter</span> <br> Académico</p>
 					<p><span class="bold">autoría</span> <br> Facundo Vacotti <br> Juliana Vidal</p>
 					<p><span class="bold">año de realización</span> <br> 2021</p>
