--- a/pages/editorial.html
+++ b/pages/editorial.html
@@ -89,7 +89,7 @@
 					</div>
 				</div>
 				<div class="ficha">
-					<p><span class="bold">título</span> <br> Hiroshige</p>
+					<p><span class="bold">proyecto</span> <br> Hiroshige</p>
 					<p><span class="bold">carácter</span> <br> Académico</p>
 					<p><span class="bold">autoría</span> <br> Facundo Vacotti <br> Juliana Vidal</p>
 					<p><span class="bold">año de realización</span> <br> 2022</p>
@@ -114,7 +114,7 @@
 					</div>
 				</div>
 				<div class="ficha">
-					<p><span class="bold">título</span> <br> Huerta urbana</p>
+					<p><span class="bold">proyecto</span> <br> Huerta urbana</p>
 					<p><span class="bold">carácter</span> <br> Académico</p>
 					<p><span class="bold">autoría</span> <br> Facundo Vacotti <br> Juliana Vidal</p>
 					<p><span class="bold">año de realización</span> <br> 2022</p>
@@ -157,7 +157,7 @@
 					</div>
 				</div>
 				<div class="ficha">
-					<p><span class="bold">título</span> <br> Un mundo feliz <br> Huxley</p>
+					<p><span class="bold">proyecto</span> <br> Un mundo feliz <br> Huxley</p>
 					<p><span class="bold">carácter</span> <br> Académico</p>
 					<p><span class="bold">autoría</span> <br> Facundo Vacotti</p>
 					<p><span class="bold">año de realización</span> <br> 2022</p>
