--- a/pages/lettering.html
+++ b/pages/lettering.html
@@ -84,7 +84,7 @@
 				</div>
 			</article>
 			<div class="ficha">
-				<p><span class="bold">título</span> <br> Real</p>
+				<p><span class="bold">proyecto</span> <br> Real</p>
 				<p><span class="bold">carácter</span> <br> Académico</p>
 				<p><span class="bold">autoría</span> <br> Facundo Vacotti</p>
 				<p><span class="bold">año de realización</span> <br> 2022</p>
