--- a/index.html
+++ b/index.html
@@ -150,9 +150,11 @@
 						</li>
 						<li>
 							<div class="time-content">
-								<h4 class="date">ago-2023</h4>
+								<h4 class="date">sep-2023</h4>
 								<p>
-									Curso <span class="bold">Aspectos básicos del diseño de la experiencia del usuario</span> (parte del programa <span class="bold">Diseño de Experiencia del Usuario</span>) brindado por Google a través de la plataforma Coursera.
+									Curso de <span class="bold">inglés</span> (nivel 5 CUI-UBA, A2.2 del MCER)
+									brindado por el Programa de Lenguas Extranjeras para becarios Progresar del
+									Ministerio de Educación de la Nación y el Centro Universitario de Idiomas (CUI).
 								</p>
 							</div>
 						</li>
@@ -160,9 +162,15 @@
 							<div class="time-content">
 								<h4 class="date">sep-2023</h4>
 								<p>
-									Curso de <span class="bold">inglés</span> (nivel 5 CUI-UBA, A2.2 del MCER)
-									brindado por el Programa de Lenguas Extranjeras para becarios Progresar del
-									Ministerio de Educación de la Nación y el Centro Universitario de Idiomas (CUI).
+									Curso <span class="bold">Primeros pasos en el proceso de diseño de UX: Empatizar, definir e idear</span> (parte del programa <span class="bold">Diseño de Experiencia del Usuario</span>) brindado por Google a través de la plataforma Coursera.
+								</p>
+							</div>
+						</li>
+						<li>
+							<div class="time-content">
+								<h4 class="date">sep-2023</h4>
+								<p>
+									Curso de HTML y CSS en el marco del segundo tramo de <span class="bold">Argentina Programa 4.0</span> en ITMaster Academy.
 								</p>
 							</div>
 						</li>
@@ -226,9 +234,11 @@
 						</li>
 						<li>
 							<div class="time-content">
-								<h4 class="date">ago-2023</h4>
+								<h4 class="date">sep-2023</h4>
 								<p>
-									Curso <span class="bold">Aspectos básicos del diseño de la experiencia del usuario</span> (parte del programa <span class="bold">Diseño de Experiencia del Usuario</span>) brindado por Google a través de la plataforma Coursera.
+									Curso de <span class="bold">inglés</span> (nivel 5 CUI-UBA, A2.2 del MCER)
+									brindado por el Programa de Lenguas Extranjeras para becarios Progresar del
+									Ministerio de Educación de la Nación y el Centro Universitario de Idiomas (CUI).
 								</p>
 							</div>
 						</li>
@@ -236,9 +246,15 @@
 							<div class="time-content">
 								<h4 class="date">sep-2023</h4>
 								<p>
-									Curso de <span class="bold">inglés</span> (nivel 5 CUI-UBA, A2.2 del MCER)
-									brindado por el Programa de Lenguas Extranjeras para becarios Progresar del
-									Ministerio de Educación de la Nación y el Centro Universitario de Idiomas (CUI).
+									Curso <span class="bold">Primeros pasos en el proceso de diseño de UX: Empatizar, definir e idear</span> (parte del programa <span class="bold">Diseño de Experiencia del Usuario</span>) brindado por Google a través de la plataforma Coursera.
+								</p>
+							</div>
+						</li>
+						<li>
+							<div class="time-content">
+								<h4 class="date">sep-2023</h4>
+								<p>
+									Curso de HTML y CSS en el marco del segundo tramo de <span class="bold">Argentina Programa 4.0</span> en ITMaster Academy.
 								</p>
 							</div>
 						</li>
